--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="center">
   <div class="measure">
     <small>
-      Built using the Pixyll theme on Jekyll
+      Built using the Pixyll theme on Jekyll<br />
       &lt;/&gt; available on <a href="https://github.com/PoisonNinja/PoisonNinja.github.io">Github</a>.
     </small>
   </div>
